--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,7 +39,7 @@
         </div>
         <footer>
            <div class="container">
-               <p class="text-center">基于Dajngo1.5,Bootsratp3</p>
+               <p class="text-center">基于Django1.5,Bootstrap3</p>
            </div>
         </footer>
     </div>
