更改分页样式

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -30,7 +30,7 @@
 
 
             {% if page_obj%}
-            {% include "./blog/pagination.html"%}
+            {% include "./blog/pagination2.html"%}
             {% endif %}
 
             
