--- a/blog/static/css/0x2d.css
+++ b/blog/static/css/0x2d.css
@@ -648,3 +648,22 @@ footer {
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #bfbfbf;
 }
+
+.pagination > li > a, .pagination > li > span {
+    border-radius: 15px;
+    margin: 5px;
+}
+
+.pagination > li:first-child > a, .pagination > li:first-child > span {
+    border-radius: 15px;
+    margin: 5px;
+}
+
+.pagination > li:last-child > a, .pagination > li:last-child > span {
+    border-radius: 15px;
+    margin: 5px;
+}
+
+.pager {
+    margin: 0;
+}
