--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,6 +19,7 @@
     <script src="/static/js/jquery.form.js"></script>
 {#    <script src="/static/index/jquery.Jcrop.min.js"></script>#}
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-paginator.js"></script>
 
     <link type="text/css" href="/static/syntax/shCore.css" media="screen" />
     <link type="text/css" rel="stylesheet" href="/static/syntax/shCoreDefault.css"/>
