--- a/blog/static/css/0x2d.css
+++ b/blog/static/css/0x2d.css
@@ -670,3 +670,8 @@ footer {
 .syntaxhighlighter .toolbar {
   display: none;
 }
+.pager li > a, .pager li > span {
+    padding: 6px 12px;
+    background-color: #FBFBFB;
+    border: 1px solid #FBFBFB;
+}
